Maelstrom theme MLSTRM-192 Modal is hidden by fixed header

--- a/mica/maelstrom_bootstrap/css/custom.css
+++ b/mica/maelstrom_bootstrap/css/custom.css
@@ -19,6 +19,18 @@ img#logo-header {
   margin-top: -40px;
 }
 
+.modal {
+  bottom: 0;
+  display: none;
+  left: 0;
+  outline: 0 none;
+  overflow: hidden;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 9999 !important;
+}
+
 /***Badge ***/
 
 [class^="i-obiba-mael"], [class*=" i-obiba-mael"] {
