--- a/mica/maelstrom_bootstrap/css/headers/header-default.css
+++ b/mica/maelstrom_bootstrap/css/headers/header-default.css
@@ -592,7 +592,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	z-index: 9999;
+	z-index: 9996;
 	position: fixed;
 	border-bottom: none;
 	box-shadow: 0 0 3px #bbb;
